fix dockerfile symlink issues
Signed-off-by: Aaron Lippold <lippold@gmail.com>

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -23,15 +23,19 @@ jobs:
           mkdir -p certs/org
           touch certs/org/mitre-ca-bundle.pem
           
-      - name: Create Dockerfile symlinks
+      # Modified to ensure Dockerfiles exist instead of relying on symlinks
+      - name: Prepare Dockerfiles
         run: |
-          ./scripts/update-dockerfiles.sh
+          # Instead of relying on symlinks, directly reference the actual files
+          echo "Using Dockerfile for full build"
+          echo "Using Dockerfile.optimized for minimal build"
       
       - name: Build minimal container
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./minimal.Dockerfile
+          # Directly use the actual Dockerfile.optimized instead of a symlink
+          file: ./Dockerfile.optimized
           push: false
           tags: cac-builder:minimal-test
           cache-from: type=gha
@@ -46,7 +50,8 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./full.Dockerfile
+          # Directly use the actual Dockerfile instead of a symlink
+          file: ./Dockerfile
           push: false
           tags: cac-builder:full-test
           cache-from: type=gha
