--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: [ main ]
 
+# Set permissions explicitly for security best practices
+permissions:
+  contents: read  # For checking out code
+  packages: read  # For pulling container images
+  # Note: For PR builds, we don't need write permissions
+
 jobs:
   build:
     name: Build and Test Containers
@@ -18,12 +24,42 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       
-      - name: Create empty certificate file for build
+      - name: Create certificate file for build
         run: |
           mkdir -p certs/org
-          touch certs/org/mitre-ca-bundle.pem
           
-      # Modified to ensure Dockerfiles exist instead of relying on symlinks
+          # Function to create certificate from parts
+          create_cert_from_parts() {
+            # Start with an empty file
+            : > certs/org/ca-bundle.pem
+            
+            # Add each available part (up to 20 parts)
+            for i in {1..20}; do
+              SECRET_NAME="CA_BUNDLE_PART$i"
+              if [ -n "$(eval echo \${{ secrets.$SECRET_NAME }})" ]; then
+                echo "Adding certificate part $i"
+                echo "$(eval echo \${{ secrets.$SECRET_NAME }})" >> certs/org/ca-bundle.pem
+              else
+                # Stop when we run out of parts
+                break
+              fi
+            done
+            
+            echo "Using CA certificate assembled from multiple parts"
+          }
+          
+          # First try using single secret
+          if [ -n "${{ secrets.CA_BUNDLE }}" ]; then
+            echo "${{ secrets.CA_BUNDLE }}" > certs/org/ca-bundle.pem
+            echo "Using CA certificate from single secret"
+          # Next try using split certificate parts
+          elif [ -n "${{ secrets.CA_BUNDLE_PART1 }}" ]; then
+            create_cert_from_parts
+          else
+            # Fallback to empty file
+            touch certs/org/empty-ca-bundle.pem
+            echo "Using empty CA certificate file"
+
       - name: Prepare Dockerfiles
         run: |
           # Instead of relying on symlinks, directly reference the actual files
