--- a/.github/workflows/publish-container.yml
+++ b/.github/workflows/publish-container.yml
@@ -6,13 +6,23 @@ on:
     tags: [ 'v*' ]
   workflow_dispatch:
 
+# Set explicit permissions - only grant what's needed
+permissions:
+  contents: read     # Needed to check out the repository
+  packages: write    # Needed to push to GitHub Container Registry
+  # The following permissions are NOT needed and should remain at default (none):
+  # - issues
+  # - pull-requests
+  # - actions
+  # - security-events
+  # - id-token
+  # - deployments
+
 jobs:
   push-to-registry:
     name: Push containers to GitHub Container Registry
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+    # Job-level permissions are already set at workflow level
     
     steps:
       - name: Checkout repository
@@ -21,10 +31,42 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       
-      - name: Create empty certificate file for build
+      - name: Create certificate file for build
         run: |
           mkdir -p certs/org
-          touch certs/org/mitre-ca-bundle.pem
+          
+          # Function to create certificate from parts
+          create_cert_from_parts() {
+            # Start with an empty file
+            : > certs/org/ca-bundle.pem
+            
+            # Add each available part (up to 20 parts)
+            for i in {1..20}; do
+              SECRET_NAME="CA_BUNDLE_PART$i"
+              if [ -n "$(eval echo \${{ secrets.$SECRET_NAME }})" ]; then
+                echo "Adding certificate part $i"
+                echo "$(eval echo \${{ secrets.$SECRET_NAME }})" >> certs/org/ca-bundle.pem
+              else
+                # Stop when we run out of parts
+                break
+              fi
+            done
+            
+            echo "Using CA certificate assembled from multiple parts"
+          }
+          
+          # First try using single secret
+          if [ -n "${{ secrets.CA_BUNDLE }}" ]; then
+            echo "${{ secrets.CA_BUNDLE }}" > certs/org/ca-bundle.pem
+            echo "Using CA certificate from single secret"
+          # Next try using split certificate parts
+          elif [ -n "${{ secrets.CA_BUNDLE_PART1 }}" ]; then
+            create_cert_from_parts
+          else
+            # Fallback to empty file
+            touch certs/org/empty-ca-bundle.pem
+            echo "Using empty CA certificate file"
+          fi
       
       # Modified to ensure Dockerfiles exist instead of relying on symlinks
       - name: Prepare Dockerfiles
