Improve certificate handling & GitHub Actions workflows
This commit enhances certificate management for GitHub Actions workflows and local
development, making it more reliable, secure, and flexible.

Certificate improvements:
- Add script to split certificates into smaller chunks for GitHub secrets
- Create helper script to update GitHub repository secrets via CLI
- Improve certificate file naming to be more organization-neutral
- Update workflow files to handle certificates split into multiple parts
- Add explicit support for up to 9 certificate parts

GitHub Actions security enhancements:
- Add explicit permission settings following security best practices
- Apply least-privilege principle to workflow permissions
- Document security considerations in workflow README

Documentation & developer experience:
- Update CERTIFICATES.md with detailed instructions for certificate splitting
- Add .env.example template for environment configuration
- Update .gitignore to prevent committing certificate files or splits
- Create update-workflow-cert-splits.sh script for easier workflow maintenance

This change allows us to overcome GitHub's 64KB secret size limit while
maintaining proper security practices.

Signed-off-by: Aaron Lippold <lippold@gmail.com>

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -27,26 +27,8 @@ jobs:
       - name: Create certificate file for build
         run: |
           mkdir -p certs/org
-          
-          # Function to create certificate from parts
-          create_cert_from_parts() {
-            # Start with an empty file
-            : > certs/org/ca-bundle.pem
-            
-            # Add each available part (up to 20 parts)
-            for i in {1..20}; do
-              SECRET_NAME="CA_BUNDLE_PART$i"
-              if [ -n "$(eval echo \${{ secrets.$SECRET_NAME }})" ]; then
-                echo "Adding certificate part $i"
-                echo "$(eval echo \${{ secrets.$SECRET_NAME }})" >> certs/org/ca-bundle.pem
-              else
-                # Stop when we run out of parts
-                break
-              fi
-            done
-            
-            echo "Using CA certificate assembled from multiple parts"
-          }
+          # Start with an empty file
+          touch certs/org/ca-bundle.pem
           
           # First try using single secret
           if [ -n "${{ secrets.CA_BUNDLE }}" ]; then
@@ -54,11 +36,56 @@ jobs:
             echo "Using CA certificate from single secret"
           # Next try using split certificate parts
           elif [ -n "${{ secrets.CA_BUNDLE_PART1 }}" ]; then
-            create_cert_from_parts
+            # Add part 1
+            echo "${{ secrets.CA_BUNDLE_PART1 }}" > certs/org/ca-bundle.pem
+            echo "Adding certificate part 1"
+            
+            # Check for and add additional parts
+            if [ -n "${{ secrets.CA_BUNDLE_PART2 }}" ]; then
+              echo "${{ secrets.CA_BUNDLE_PART2 }}" >> certs/org/ca-bundle.pem
+              echo "Adding certificate part 2"
+            fi
+            
+            if [ -n "${{ secrets.CA_BUNDLE_PART3 }}" ]; then
+              echo "${{ secrets.CA_BUNDLE_PART3 }}" >> certs/org/ca-bundle.pem
+              echo "Adding certificate part 3"
+            fi
+            
+            if [ -n "${{ secrets.CA_BUNDLE_PART4 }}" ]; then
+              echo "${{ secrets.CA_BUNDLE_PART4 }}" >> certs/org/ca-bundle.pem
+              echo "Adding certificate part 4"
+            fi
+            
+            if [ -n "${{ secrets.CA_BUNDLE_PART5 }}" ]; then
+              echo "${{ secrets.CA_BUNDLE_PART5 }}" >> certs/org/ca-bundle.pem
+              echo "Adding certificate part 5"
+            fi
+            
+            if [ -n "${{ secrets.CA_BUNDLE_PART6 }}" ]; then
+              echo "${{ secrets.CA_BUNDLE_PART6 }}" >> certs/org/ca-bundle.pem
+              echo "Adding certificate part 6"
+            fi
+            
+            if [ -n "${{ secrets.CA_BUNDLE_PART7 }}" ]; then
+              echo "${{ secrets.CA_BUNDLE_PART7 }}" >> certs/org/ca-bundle.pem
+              echo "Adding certificate part 7"
+            fi
+            
+            if [ -n "${{ secrets.CA_BUNDLE_PART8 }}" ]; then
+              echo "${{ secrets.CA_BUNDLE_PART8 }}" >> certs/org/ca-bundle.pem
+              echo "Adding certificate part 8"
+            fi
+            
+            if [ -n "${{ secrets.CA_BUNDLE_PART9 }}" ]; then
+              echo "${{ secrets.CA_BUNDLE_PART9 }}" >> certs/org/ca-bundle.pem
+              echo "Adding certificate part 9"
+            fi
+            
+            echo "Using CA certificate assembled from multiple parts"
           else
             # Fallback to empty file
-            touch certs/org/empty-ca-bundle.pem
             echo "Using empty CA certificate file"
+          fi
 
       - name: Prepare Dockerfiles
         run: |
