fixed syntax error
Signed-off-by: Aaron Lippold <lippold@gmail.com>

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -27,55 +27,65 @@ jobs:
       - name: Create certificate file for build
         run: |
           mkdir -p certs/org
+          
           # Start with an empty file
           touch certs/org/ca-bundle.pem
           
           # First try using single secret
           if [ -n "${{ secrets.CA_BUNDLE }}" ]; then
+            # Use the single bundle secret
             echo "${{ secrets.CA_BUNDLE }}" > certs/org/ca-bundle.pem
             echo "Using CA certificate from single secret"
           # Next try using split certificate parts
           elif [ -n "${{ secrets.CA_BUNDLE_PART1 }}" ]; then
-            # Add part 1
+            # For split certificates, start with part 1
             echo "${{ secrets.CA_BUNDLE_PART1 }}" > certs/org/ca-bundle.pem
             echo "Adding certificate part 1"
             
-            # Check for and add additional parts
+            # Then append each additional part that exists
+            # Part 2
             if [ -n "${{ secrets.CA_BUNDLE_PART2 }}" ]; then
               echo "${{ secrets.CA_BUNDLE_PART2 }}" >> certs/org/ca-bundle.pem
               echo "Adding certificate part 2"
             fi
             
+            # Part 3
             if [ -n "${{ secrets.CA_BUNDLE_PART3 }}" ]; then
               echo "${{ secrets.CA_BUNDLE_PART3 }}" >> certs/org/ca-bundle.pem
               echo "Adding certificate part 3"
             fi
             
+            # Part 4
             if [ -n "${{ secrets.CA_BUNDLE_PART4 }}" ]; then
               echo "${{ secrets.CA_BUNDLE_PART4 }}" >> certs/org/ca-bundle.pem
               echo "Adding certificate part 4"
             fi
             
+            # Part 5
             if [ -n "${{ secrets.CA_BUNDLE_PART5 }}" ]; then
               echo "${{ secrets.CA_BUNDLE_PART5 }}" >> certs/org/ca-bundle.pem
               echo "Adding certificate part 5"
             fi
             
+            # Part 6
             if [ -n "${{ secrets.CA_BUNDLE_PART6 }}" ]; then
               echo "${{ secrets.CA_BUNDLE_PART6 }}" >> certs/org/ca-bundle.pem
               echo "Adding certificate part 6"
             fi
             
+            # Part 7
             if [ -n "${{ secrets.CA_BUNDLE_PART7 }}" ]; then
               echo "${{ secrets.CA_BUNDLE_PART7 }}" >> certs/org/ca-bundle.pem
               echo "Adding certificate part 7"
             fi
             
+            # Part 8
             if [ -n "${{ secrets.CA_BUNDLE_PART8 }}" ]; then
               echo "${{ secrets.CA_BUNDLE_PART8 }}" >> certs/org/ca-bundle.pem
               echo "Adding certificate part 8"
             fi
             
+            # Part 9
             if [ -n "${{ secrets.CA_BUNDLE_PART9 }}" ]; then
               echo "${{ secrets.CA_BUNDLE_PART9 }}" >> certs/org/ca-bundle.pem
               echo "Adding certificate part 9"
