--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -127,7 +127,7 @@ jobs:
           echo "Architecture: $(uname -m)"
           echo "Processor: $(sysctl -n machdep.cpu.brand_string)"
       
-      - name: Install Docker with Colima
+      - name: Install Docker with Rancher Desktop
         run: |
           # Install Homebrew if needed
           if ! command -v brew &> /dev/null; then
@@ -137,27 +137,54 @@ jobs:
             eval "$(/opt/homebrew/bin/brew shellenv)"
           fi
           
-          # Install Colima and Docker CLI
-          brew install colima docker
+          # Install Docker CLI
+          brew install docker
           
-          # Start Colima with extra resources for container builds
-          echo "Starting Colima..."
-          colima start --cpu 4 --memory 8 --disk 50 --arch aarch64
+          # Install Rancher Desktop for M1/M2 Macs
+          echo "Installing Rancher Desktop..."
+          brew install --cask rancher
           
-          # Wait for Docker to be fully available
-          echo "Waiting for Docker to start..."
-          timeout=30
-          until docker info &>/dev/null || [ $timeout -eq 0 ]; do
-            sleep 1
-            ((timeout--))
+          # Set environment variables for Docker to use Rancher's socket
+          echo "Setting up Docker environment..."
+          mkdir -p ~/.docker
+          
+          # Wait for Rancher services to start
+          echo "Waiting for Rancher Desktop services to start..."
+          timeout=120
+          until test -S ~/Library/Application\ Support/rancher-desktop/run/docker.sock || [ $timeout -eq 0 ]; do
+            echo "Waiting for Docker socket... ($timeout seconds left)"
+            sleep 5
+            ((timeout-=5))
           done
           
-          if docker info &>/dev/null; then
-            echo "Docker is running"
-            docker info | grep "Server Version"
+          # Link the socket if it exists
+          if test -S ~/Library/Application\ Support/rancher-desktop/run/docker.sock; then
+            ln -sf ~/Library/Application\ Support/rancher-desktop/run/docker.sock ~/.docker/run-docker.sock
+            export DOCKER_HOST=unix://~/.docker/run-docker.sock
+            echo "DOCKER_HOST=unix://~/.docker/run-docker.sock" >> $GITHUB_ENV
+            echo "Docker socket linked successfully"
           else
-            echo "Docker failed to start"
-            colima status
+            # Fallback to Docker Desktop if available
+            echo "Rancher Desktop failed to start, trying Docker CLI directly..."
+            brew install --cask docker
+            open -a Docker
+            
+            # Wait for Docker to start
+            echo "Waiting for Docker to start..."
+            timeout=60
+            while ! docker info &>/dev/null && [ $timeout -gt 0 ]; do
+              echo "Waiting for Docker... ($timeout seconds left)"
+              sleep 2
+              ((timeout-=2))
+            done
+          fi
+          
+          # Verify Docker is running
+          if docker info &>/dev/null; then
+            echo "Docker is running successfully"
+            docker info
+          else
+            echo "Docker failed to start after multiple attempts"
             exit 1
           fi
       
