Fix Lima architecture specification for ARM64 builds
- Fix architecture specification to use 'aarch64' instead of 'arm64'
- Update Lima configuration with proper arch parameter
- Fix shell variable expansion in provisioning script
- Add comments explaining architecture naming conventions
- Fix paths and escaping in Lima configuration files

This addresses the error in Lima setup: 'field arm64 must be "x86_64", "aarch64", "armv7l" or "riscv64"; got "arm64"'

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -134,8 +134,9 @@ jobs:
           
           # Create a Lima config file optimized for GitHub Actions
           cat > lima-config.yaml << EOF
-          # Example lima configuration for GitHub Actions
-          arch: "$(uname -m)"
+          # Lima configuration optimized for GitHub Actions
+          # Lima expects "aarch64" not "arm64" for architecture
+          arch: "aarch64"
           images:
           - location: "https://cloud-images.ubuntu.com/jammy/current/jammy-server-cloudimg-arm64.img"
             arch: "aarch64"
@@ -160,7 +161,7 @@ jobs:
               install -m 0755 -d /etc/apt/keyrings
               curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
               chmod a+r /etc/apt/keyrings/docker.asc
-              echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
+              echo "deb [arch=\$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \$(. /etc/os-release && echo "\$VERSION_CODENAME") stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
               apt-get update && apt-get install -y docker-ce docker-ce-cli containerd.io
               usermod -aG docker ubuntu
           portForwards:
